Fixed bugs and improved alignment

--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  /* color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424; */
+  /* color-scheme: light dark; */
+  /* color: rgba(255, 255, 255, 0.87); */
+  /* background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -31,7 +31,7 @@ li {
 body {
   margin: 0;
   display: flex;
-  min-width: 320px;
+  width: 100vw;
   min-height: 100vh;
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
